third_party/move/move-compiler/tests/move_check/naming/underscore.exp
error[E03009]: unbound variable
   ┌─ tests/move_check/naming/underscore.move:38:9
   │
38 │         _  // undefined
   │         ^ Invalid variable usage. Unbound variable '_'

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/naming/underscore.move:41:30
   │
41 │     public fun test8(_: u64, _: u64): u64 {
   │                      -       ^ Duplicate parameter with name '_'
   │                      │        
   │                      Previously declared here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/naming/underscore.move:46:37
   │
46 │     inline fun fun9(x: u64, _: u64, _: u64): u64 {
   │                             -       ^ Duplicate parameter with name '_'
   │                             │        
   │                             Previously declared here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/naming/underscore.move:54:38
   │
54 │     inline fun fun10(x: u64, _: u64, _: |u64|u64): u64 {
   │                              -       ^ Duplicate parameter with name '_'
   │                              │        
   │                              Previously declared here

error[E04007]: incompatible types
   ┌─ tests/move_check/naming/underscore.move:59:9
   │
54 │     inline fun fun10(x: u64, _: u64, _: |u64|u64): u64 {
   │                                         -------- Expected: '|u64|u64'
   ·
59 │         fun10(4, 3, 2)
   │         ^^^^^^^^^^^^^^
   │         │           │
   │         │           Given: integer
   │         Invalid call of '0xC0FFEE::m::fun10'. Invalid argument for parameter '_'

